--- a/web/home/templates/home/posting.html
+++ b/web/home/templates/home/posting.html
@@ -1,99 +1,50 @@
+{% extends 'home/main.html' %}
+
 {% load static %}
 
-<!DOCTYPE html>
-<html lang ="en">
-    <head>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <title>Posting</title>
-        <style>
-            *{
-                box-sizing: border-box;
-            }
-            body {
-                margin : 0;
-                background: grey ;
+{% block content %}
 
-            }
-            .nav{
-                border: 1px solid black;
-                border-collapse: collapse;
-                width : 100%;
-                height : 70px;
-                background-color: black;
-            }
-            .nav th {
-                border: 1px solid black;
-                border-collapse: collapse;
-                padding: 2px;
-                color : white;
-            }
-            .logo{
-                width : 60px;
-                height: 60px;
-            }
-            .header-text{
-                color: white; 
-                font-family: arial   ;
-            }
-            .container {
-                width : 1000px;
-                margin : auto;
-                background: #f2f2f2 ;
-                border : 1px solid black;
-                height : 600px;
-                overflow :auto;
-            }
-            .form-group{
-                margin: 10px 200px;
-            }
-            .submit{
-                width :1000px;
-                margin : 10px 200px;
-            }
-        </style>
-    </head>
-    <body>
-        <table class ="nav" >
-            <thead>
-                <th><img class ="logo" src ="{% static "images\Mercenaries logo.jpg" %}" alt="logo"></th>
-                <th><a class ="header-text" href = "{% url 'home:chat' %}" >Chat</a></th>
-                <th><a class ="header-text" href = "{% url 'home:posting' %}" >Posting</a></th>
-                <th><a class ="header-text" href = "{% url 'home:loged_in_index' %}" >Home</a></th>
-            </thead>
-        </table>
-        <div class ="container">
-            <h1 style = "margin: 10px 100px" >Requirement</h1>
-            <form action="{% url 'home:posting' %}" method="post">
-                {% csrf_token %}
-                <div class ="form-group">
-                    {{ form.game}}
-                </div>
-                <br>
-                <div class ="form-group">
-                    {{ form.required_time}}
-                </div>
-                <br>
-                <div class ="form-group">
-                    {{ form.required_rank}}
-                </div>
-                <br>
-                <div class ="form-group">
-                    {{ form.reward_ingame}}
-                </div>
-                <br>
-                <div class ="form-group">
-                    {{ form.salary}}
-                </div>
-                <br>
-                <div class ="form-group">
-                    {{ form.description}}
-                </div>
-                <br>
-                <div class="submit">
-                    <a class ="btn btn-warning" href="{% url 'home:posts' %} " style ="width :120px;margin: 0px 80px " >Check your post</a>
-                    <input class ="btn btn-danger" type="submit" value="Submit" style ="width :120px;margin: 0px 80px " >                    
-                </div>                
-            </form>
+<link rel="stylesheet" type="text/css" href="{% static 'css/posting.css' %}">
+
+<div class ="container">
+    <h1 style = "margin: 10px 100px" >Requirement</h1>
+    <form action="{% url 'home:posting'  %}" method="POST">
+        {% csrf_token %}
+        <div class ="form-group">
+            {{ form.game}}
         </div>
-    </body>
-</html>
+        <br>
+        <div class ="form-group">
+            {{ form.required_time}}
+        </div>
+        <br>
+        <div class ="form-group">
+            {{ form.required_rank}}                    
+        </div>
+        <br>
+        <div class ="form-group">
+            {{ form.reward_ingame}}
+        </div>
+        <br>                    
+        <div class ="form-group">
+            {{ form.number_of_recruit_player}}
+        </div>
+        <br>
+        <div class ="form-group">
+            {{ form.salary}}
+        </div>
+        <br>
+        <div class ="form-group">
+            {{ form.description}}
+        </div>
+        <br>
+        <div class="submit">
+            <a class ="btn btn-warning" href="{% url 'home:posts' %} " style ="width :120px;margin: 0px 80px " >Check your post</a>
+            <input class ="btn btn-danger" type="submit" value="Submit" style ="width :120px;margin: 0px 80px " >                    
+        </div>                
+    </form>
+</div>
+
+
+
+{% endblock %}
