--- a/web/home/templates/home/login.html
+++ b/web/home/templates/home/login.html
@@ -1,90 +1,43 @@
+{% extends 'home/main.html' %}
 
 {% load static %}
 
-<!DOCTYPE html>
-<html lang ="en">
-    <head>
-        <title>Home </title>
-        <style>
-            *{
-                box-sizing: border-box;
-            }
-            body {
-                margin : 0;
-                background: grey ;
+{% block content %}
 
-            }
-            .nav{
-                border: 1px solid black;
-                border-collapse: collapse;
-                width : 100%;
-                height : 70px;
-                background-color: black;
-            }
-            .nav th {
-                border: 1px solid black;
-                border-collapse: collapse;
-                padding: 2px;
-                color : white;
-            }
-            .logo{
-                width : 60px;
-                height: 60px;
-            }
-            .header-text{
-                color: white; 
-                font-family: arial   ;
-            }
-            .container {
-                width : 1000px;
-                margin : auto;
-                background: #f2f2f2 ;
-                border : 1px solid black;
-                height : 600px;
-                overflow :auto; 
-            }
-            .login_box{
-                width : 330px;
-                margin: 20px 333px ;
-                background: #f2f2f2 ;
-                border : 1px solid black;
-                height: 400px;
-
-            }
-            
-        </style>
-    </head>
-    <body>
-        <table class ="nav" >
-            <thead>
-                <th><img class ="logo" src ="{% static "images\Mercenaries logo.jpg" %}" alt="logo"></th>
-                <th><a class ="header-text" href = "{% url 'home:chat' %}" >Chat</a></th>
-                <th><a class ="header-text" href = "{% url 'home:posting' %}" >Posting</a></th>
-                <th><a class ="header-text" href = "{% url 'home:index' %}" >Home</a></th>
-            </thead>
-        </table>
-        
-        <div class =" container ">
-            <div class ="login_box">
-                Login
+<div class="login masthead bg-white">
+    <div class="container">
+        <div class="login-card text-secondary ">
+            <div class="form-title">
+                <h1>Login</h1>
                 {% if message %}
                     <div>{{ message }}</div>
                 {% endif %}
+                <!--Fix the form when shrink-->
                 <form action="{% url 'home:login' %}" method="post">
                     {% csrf_token %}
-                    <div class ="form-group">
-                        {{login_form.username}}
-                    </div>
-                    <div class ="form-group">
-                        {{login_form.password}}
-                    </div>
-                    <input type ="submit">
-                Don't have an account yet? Let's Signup!
-                <a href ="{% url 'home:signup' %}">Signup</a>
+                <div class ="form-group">
+                    {{login_form.username}}
+                </div>
+                <div class ="form-group">
+                    {{login_form.password}}                   
+                </div>
+                <div class="login-submit text-center">
+                    <input class="btn btn-info" type="submit" value="Login">
+                </div>
+                {% for message in messages %}
+                    <p class= "error_message">{{message}}</p>
+                {% endfor %}
+                <div class="no-account text-center ">
+                    <p>Don't have an account yet? Let's Signup!</p>
+                    <a href ="{% url 'home:signup' %}">Signup</a> 
+                </div>
+                <br>
                 </form>
             </div>
-        </div>    
-    </body>
-</html>
+        </div>
+    </div>
+</div>
+
+{% endblock %}
 
 
