--- a/web/home/templates/home/posts.html
+++ b/web/home/templates/home/posts.html
@@ -50,7 +50,7 @@
                 <th><img class ="logo" src ="{% static "images\Mercenaries logo.jpg" %}" alt="logo"></th>
                 <th><a class ="header-text" href = "{% url 'home:chat' %}" >Chat</a></th>
                 <th><a class ="header-text" href = "{% url 'home:posting'  %}" >Posting</a></th>
-                <th><a class ="header-text" href = "{% url 'home:loged_in_index' %}" >Home</a></th>
+                <th><a class ="header-text" href = "{% url 'home:landing' %}" >Home</a></th>
             </thead>
         </table>
         <div class ="container">
