--- a/web/home/templates/home/signup.html
+++ b/web/home/templates/home/signup.html
@@ -4,36 +4,37 @@
 
 {% block content %}
 
-<link rel="stylesheet" type="text/css" href="{% static 'css/signup.css' %}">
-
-<div class =" container ">
-    <div class ="signup_box">
-        Signup
-
-        <form action="{% url 'home:signup' %}" method="post">
-            {% csrf_token %}
-            <div class ="form-group">
-                {{signup_form.first_name}}
-            </div>
-            <div class ="form-group">
-                {{signup_form.last_name}}
-            </div>
-            <div class ="form-group">
-                {{signup_form.username}}
-            </div>
-            <div class ="form-group">
-                {{signup_form.email}}
-            </div>
-            <div class ="form-group">
-                {{signup_form.password}}
-            </div>
-            <div class ="form-group">
-                {{signup_form.confirm_password}}
-            </div>
-            <input type ="submit"> 
-        </form>
+<div class="signup masthead bg-white">
+    <div class="login-card text-secondary">
+        <div class ="form-title">
+            <h1>Signup</h1>
+            <!--Fix later:size when shrink-->
+            <form action="{% url 'home:signup' %}" method="post">
+                {% csrf_token %}
+                <div class ="form-group">
+                    {{form.username}}
+                    {{form.errors}}
+                </div>
+                <div class ="form-group">
+                    {{form.email}}
+                    {{form.errors}}
+                </div>
+                <div class ="form-group">
+                    {{form.password}}
+                    {{form.errors}}
+                </div>
+                <div class ="form-group">
+                    {{form.confirm_password}}
+                    {{form.errors}}
+                </div>
+                <div class="login-submit text-center">
+                    <input class="btn btn-info" type="submit" value="Signup"> 
+                </div>
+                <br>
+            </form>
+        </div>
     </div>
-</div>    
+</div>  
 
 {% endblock %}
 
