--- a/web/static/css/main.css
+++ b/web/static/css/main.css
@@ -3,27 +3,87 @@
 }
 body {
     margin : 0;
-    background: grey ;
+    background: white ;
+    
 
 }
+
+.navbar>.container{
+    display:flex;
+    flex-wrap: inherit;
+    align-items: center !important;
+    justify-content: space-between !important;
+    margin-left:26px;
+    margin-right:26px;
+    padding-right:12px;
+    padding-left:12px;
+    max-width:960px;
+}
+.navbar-brand {
+    color:#fff !important;
+    font-size:28px;
+    margin-left:1rem;
+    margin-right:16px;
+}
+.nav-item {
+    margin-left: auto;
+}
 .nav{
-    border: 1px solid black;
-    border-collapse: collapse;
-    width : 100%;
-    height : 70px;
-    background-color: black;
+    display:flex;
+    flex-wrap: wrap;
+    padding-top: 24px !important;
+    padding-bottom: 24px !important ;
+    transition: padding-top 0.3s, padding-bottom 0.3s;
 }
-.nav th {
-    border: 1px solid black;
-    border-collapse: collapse;
-    padding: 2px;
-    color : white;
+ul{
+    display:flex;
+    flex-direction:row;
 }
-.logo{
-    width : 60px;
-    height: 60px;
+.nav >li {
+    display:list-item;
+    margin-left: 4px;
+    margin-right: 4px;
+    font-size: 16px;
+
 }
-.header-text{
-    color: white; 
-    font-family: arial   ;
+.nav>li>a {
+    color:#fff;
+    padding:16px;
+    display: flex;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out;
 }
+.nav>li>a:hover{
+    background-color: #2c3e50 !important;
+    color: #15967d !important;
+}.footer{
+    padding-top:5rem;
+    padding-bottom: 5rem;
+  
+  }
+  .location-container{
+    width: 50%;
+  }
+  .location-container>h4{
+    margin-bottom:1.5rem;
+  }
+  .social-media-container{
+    width: 50%;
+  }
+  .social-media-container>h4{
+    margin-bottom: 1.5rem;
+  }
+  .btn-social{
+    border-radius: 100%;
+    display: inline-flex;
+    width: 3.25rem;    
+    height: 3.25rem;
+    font-size: 1.25rem;
+    justify-content: center;
+    align-items: center;
+  }
+  .copyright{
+    background-color: #1a252f;
+    padding-top:3rem;
+    padding-bottom:3rem;
+  }
+  
